# nuenki-dictionary

./: .gitignore  README.md  temp.json  tester.py  tmp.json  to_look_at.jsonl  to_look_at.txt
build_dump/: .gitignore  1.sum.txt  2.sum.txt  Cargo.toml  compressed_dict.json  uncompressed_dict.json
build_dump/src/: main.rs  phase1load.rs  phase2.rs  phase2transform.rs  phase3.rs  phase3dereference.rs  phase4compress.rs  phase5dump.rs  tmp.json
dictserve/: Cargo.toml  build.rs
dictserve/src/: config.rs  database.rs  datastore.rs  dictionary.rs  get_definition.rs  main.rs  metrics.rs  utils.rs
libdictdefinition/: Cargo.toml
libdictdefinition/src/: lib.rs
