[package]
name = "build_dump"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

Languages = { path = "../../nuenki-relay-sched/LanguagesStoreRs" }

savefile = "0.17"
savefile-derive = "0.17"
rayon = "1.7"
