[package]
name = "build_dump"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

Languages = { path = "../../nuenki-relay-sched/LanguagesStoreRs" }

rayon = "1.7"

zstd = "0.11"
bincode = "1.3"
lazy_static = "1.5.0"
