[package]
name = "TranslatorRelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
sha2 = "0.10.8"
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "chrono",
    "tls-rustls",
] }
tokio = { version = "1", features = ["full"] }

toml = "0.8"

serde_json = "1"

Languages = { path = "../../nuenki-relay-sched/LanguagesStoreRs" }

dashmap = "6"

tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-loki = "0.2"

metrics = "0.23"
metrics-exporter-prometheus = "0.15"

savefile = "0.17"
savefile-derive = "0.17"
rayon = "1.7"
