[package]
name = "DictServe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

toml = "0.8"

serde_json = "1"

dashmap = "6"

tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-loki = "0.2"

metrics = "0.23"
metrics-exporter-prometheus = "0.15"

zstd = "0.11"
bincode = "1.3"
rayon = "1.7"

libdictdefinition = { path = "../libdictdefinition/" }
Languages = { path = "../../nuenki-languages/LanguagesStoreRs" }
